# UAV

./: CMakeLists.txt  README.md  custom_plugin.cc  publisher.cc  test.cpp
controller/: AttitudeController.cpp  AttitudeController.hpp  CMakeLists.txt  PID.cpp  PID.hpp  PositionController.cpp  PositionController.hpp
estimator/: AttitudeEstimator.cpp  AttitudeEstimator.hpp  CMakeLists.txt  ComplementaryFilter.cpp  ComplementaryFilter.hpp  KalmanFilter.cpp  KalmanFilter.hpp
models/: iris_custom.sdf
platform/: CMakeLists.txt  GPS.cpp  GPS.hpp  IMU.cpp  IMU.hpp  Motors.cpp  Motors.hpp  Platform.cpp  Platform.hpp
worlds/: custom.world  modified.world
